--- a/style.css
+++ b/style.css
@@ -8,13 +8,30 @@ body {
 #wrapper {
   width: 960px;
   margin: 20px auto 20px auto;
+  text-align: center;
 }
 h1 {
   color: white;
 }
 #summary {
-  color: #455bd4;
+  color: blue;
 }
-.skills-and-hobbies {
-  color: orange;
+.section {
+  color: white;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+
+li {
+  color: white;
+
+}
+
+a:link,a:active {
+  color: inherit;
+  text-decoration: none;
+}
+
+h5 {
+  text-align: center;
 }
